@@ -1,2 +1,1 @@
- * Fixes ```--rsa``` on systems not supporting PSS
- * Uses ```mktemp``` if available (the workaround is only used if not available for speed reasons)
+Fixes the organisation check
